2014-02-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-entity): Add comment.

2014-02-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove preview setting for multipart/signed part.
	Use mime-pgp-verify-when-preview and mime-pgp-decrypt-when-preview
	to define visibility conditions.

	* mime-view.el (mime-display-entity): insert LF when inserted
	content does not end with LF.

	* mime-pgp.el (mime-display-multipart/signed): Removed.
	(mime-display-multipart/pgp-encrypted): Adapt to recent change.

2014-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Set up for previewing application/pkcs7-mime
	part.

	* mime-view.el (mime-pgp-verify-when-preview)
	(mime-pgp-decrypt-when-preview): Moved from mime-pgp.el.
	(mime-display-entity-visible-p): New function.
	(mime-display-entity): function, variable, t, and nil are
	acceptable for situation of entity-button, header and body.
	Function will receive one argument SITUATION and return visible,
	invisible, t or nil.

	* mime-pgp.el (mime-pgp-verify-when-preview)
	(mime-pgp-decrypt-when-preview): Moved to mime-view.el.
	(mime-preview-application/pkcs7-mime): New function.

2014-02-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-preview-application/pgp-encrypted): Handle
	errors in decryption.

2014-02-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypt-string): New function.
	(mime-decrypt-application/pgp-encrypted)
	(mime-preview-application/pgp-encrypted)
	(mime-view-application/pkcs7-mime): Use it.  Remove CRs at EOL
	from result when there is CR at the first EOL.

2014-01-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: S/MIME signed entity respects
	mime-pgp-verify-when-preview's value.

	* mime-pgp.el (mime-display-multipart/signed): Renamed from
	mime-display-multipart/pgp-signed.  Support S/MIME signed entity.

2014-01-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-verify-when-preview): Set default to t.
