@@ -44,11 +44,7 @@
   (let ((string (epg-decrypt-string context cipher)))
     ;; Remove CRs if header contains CR.
     (if (string-match "\\`.*\r\n" string)
-	(with-temp-buffer
-	  (insert string)
-	  (while (search-backward "\r\n" nil t)
-	    (replace-match "\n" t t))
-	  (buffer-string))
+	(decode-coding-string string 'raw-text-dos)
       string)))
 
 ;;; @ Internal method for multipart/signed
@@ -111,10 +107,8 @@
 			     (if (fboundp 'set-buffer-multibyte)
 				 (set-buffer-multibyte nil))
 			     (mime-insert-entity orig-entity)
-			     (goto-char (point-min))
-			     (while (search-forward "\n" nil t)
-			       (replace-match "\r\n"))
-			     (buffer-substring (point-min) (point-max))))
+			     (encode-coding-string (buffer-string)
+						   'raw-text-dos)))
 	(epg-context-result-for context 'verify)))))
 
 (defun mime-verify-application/*-signature (entity situation)
