@@ -1,3 +1,11 @@
+2014-02-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-normalize-eol-crlf): New CCL program.
+	(mime-edit-sign-pgp-mime): Use it to improve speed.
+
+	* mime-pgp.el (mime-pgp-decrypt-string)
+	(mime-verify-application/*-signature-internal): Refactored.
+
 2014-02-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-view.el (mime-display-entity): Add comment.
